--- a/Neural Net/.gitignore
+++ b/Neural Net/.gitignore
@@ -35,3 +35,8 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Sublime Workspace / Projcet Source Files #
+############################################
+*.sublime-workspace
+*.sublime-project
