--- a/NeuralNet/Makefile
+++ b/NeuralNet/Makefile
@@ -14,13 +14,16 @@
 #GenAlg.o: GenAlg.cpp NeuralNet.h
 #	g++ -g -Wall -std=c++11 -c GenAlg.cpp
 
+Controller:	GenAlg.o Controller.o NeuralNet.o C2048.o Params.o
+	g++ -g -Wall -std=c++11 -o NeuralNetFinal GenAlg.o Controller.o NeuralNet.o C2048.o Params.o
+
 Control2048:	C2048.o Controller.o GenAlg.o NeuralNet.o
 	g++ -g -Wall -std=c++11 -o Control2048 Controller.o C2048.o GenAlg.o NeuralNet.o
 
-Controller.o:	Controller.cpp C2048.h GenAlg.h NeuralNet.h
-	g++ -g -Wall -std=c++11 -c Controller.cpp
+Controller.o:	controller.cpp C2048.h GenAlg.h NeuralNet.h
+	g++ -g -Wall -std=c++11 -c controller.cpp
 
-GenAlg.o:	GenAlg.cpp NeuralNet.h
+GenAlg.o:	GenAlg.cpp NeuralNet.h Params.h
 	g++ -g -Wall -std=c++11 -c GenAlg.cpp
 
 NeuralNet.o:	NeuralNet.cpp
